Адрес сделан строкой для простоты, исправлены ошибки

--- a/readme.adoc
+++ b/readme.adoc
@@ -31,16 +31,17 @@ image::schema_app.PNG[]
 image::datamodel.png[]
 
 Архитектурно проект разделен на следующие микросервисы
+У всех сервисов выведен стандартный url актуатора /actuator/health для контроля
 
-- *Config Service*              централизованное хранилище конфигураций
-- *Authentication Service*      сервис авторизации пользователей
-- *Catalog Service*             сервис предоставляет информацию о товарах. Порт 8082
-- *Basket Service*              сервис предоставляет информацию о корзине товаров
-- *Admin Service*               сервис выполняет административные функции
+- *Config Service*              http://localhost:7777 централизованное хранилище конфигураций
+- *Authentication Service*      http://localhost:9999 сервис авторизации пользователей
+- *Catalog Service*             http://localhost:8082 сервис предоставляет информацию о товарах. Порт 8082
+- *Basket Service*              http://localhost:8083 сервис предоставляет информацию о корзине товаров
+- *Admin Service*               http://localhost:8081 сервис выполняет административные функции
 - *CreateSchema Service*        сервис создает и заполняет структуры данных
-- *Order Service*               сервис выполняет обработку заказов
-- *Notification Service*        сервис позволяет уведомлять пользователей о событиях в системе
-- *Registration Service*        сервис обеспечивает регистрацию пользователей
+- *Order Service*               http://localhost:8084 сервис выполняет обработку заказов
+- *Notification Service*        http://localhost:8086 сервис позволяет уведомлять пользователей о событиях в системе
+- *Registration Service*        http://localhost:8085 сервис обеспечивает регистрацию пользователей
 
 
 Для авторизации используется jwt-авторизация
@@ -48,7 +49,6 @@ image::datamodel.png[]
 Все методы GET для Country, Good, WareHouse открыты для всех сущностей открыты всем пользователям
 Методы, изменяющие справочники, открыты администраторам системы
 Методы, изменяющие заказы, открыты самому пользователю
-
 
 Во втором ДЗ добавлены два сервиса для отправки уведомлений: PushService и EmailService
 Каждый из сервисов получает свои параметры
@@ -73,4 +73,30 @@ image::datamodel.png[]
 Первый элемент вызова котроллера - тип события push/email
 
 Второй элемент - массив свойств из таблиц указанных выше
+
+Сборка проекта mvn clean package
+Запуск докера docker-compose up
+
+Для тестирования представлены некоторые примеры запросов, выполненных в SOAPUI в файлах *soapui-project.xml
+Токены создаются в файлах get_admin_token.bat get_token.bat
+Примеры запуска API с помощью curl представлены в файлах run_add_item.bat run_basket.bat
+Тестировано в среде Docker for Windows 10.
+
+Добавлено шардирование на примере заказов, выбираемых в сервисе catalog.
+Внутри одной базы данных созданы три однотипных таблицы
+goods_msk   для товаров, которые находятся в Москве
+goods_spb   для товаров, которые находятся в Санкт-Петербурге
+goods_oth   для товаров, которые находятся в других городах
+
+Для построения ORM-модели используется нотация MappedSuperClass в классе Good,
+от которого унаследованы три независимых класса GoodMsk, GoodProvincial, GoodSpb
+
+По адресу залогиненного пользователя определяется одна из таблиц, в которой уже потом проводится и сам поиск.
+Если пользователь не залогинен, то поиск производится по всем таблицам.
+Можно рассмотреть вариант передачи в конроллер город для конкретизации поиска в качестве отдельного параметра.
+Пользователь может искать товары с доставкой в город, в котором он не проживает.
+
+Точки входа сервиса изменили номер версии на v2 и стали /microservices/v2
+Таким образом мы сразу разделяем шардированный сервис от обычного.
+Я не стал проводить по всей программе изменения сознательно так как проект учебный
 
